<resources>
    <string name="app_name">AboutMe</string>
    <string name="fio">Dmitry Babenko</string>
    <string name="email"><a href='mailto:mail2babenko@gmail.com'>mail2babenko@gmail.com</a></string>
    <string name="linkedin"><a href='https://ua.linkedin.com/in/babenkodmitry'>linkedin.com/in/babenkodmitry</a></string>
    <string name="current_position">Mobile developer</string>
    <string name="it_skills">Skills</string>
    <string name="education">Education</string>
    <string name="interests">Interests</string>
    <string name="languages">Languages</string>
    <string name="copyright">© 2016 Dmitry Babenko</string>
    <string name="openOnGitHub">Открыть на GitHub</string>
    <string name="openOnLinkedId">Открыть на LinkedIn</string>
    <string name="gitHubLink">https://github.com/babenko-da</string>
    <string name="linkedinLink">https://linkedin.com/in/babenkodmitry</string>
    <string name="showOnMap">Show on map</string>
    <string name="locationAtCurrTime">My location at 2016</string>
    <string name="google_maps_key">AIzaSyBKrYrqOVQZD8FzTeWDFNYqouVG0T7j5xI</string>
    <string name="activity_map_name">Map</string>
</resources>
