<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout">

    <!-- header -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarHeight"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="false"
            app:contentScrim="?attr/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:layout_scrollFlags="scroll"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="">
                <LinearLayout
                    android:id="@+id/main_toolbar_title_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/photo_final_width"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/main_toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/fio"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:id="@+id/main_toolbar_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/current_position"
                        android:textColor="@android:color/white"
                        />
                </LinearLayout>
            </android.support.v7.widget.Toolbar>

            <!-- header -->
            <LinearLayout
                android:id="@+id/header"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:padding="10dp"
                android:background="@android:color/transparent">

                <android.support.v4.widget.Space
                    android:layout_width="@dimen/photo_size"
                    android:layout_height="@dimen/photo_size" />

                <LinearLayout
                    android:id="@+id/main_title_description_container"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fio"
                        android:textColor="@color/colorText"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_position"
                        android:textColor="@color/colorText"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:autoLink="email"
                        android:textColor="@color/colorAccent"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="5.5pt"
                        android:text="@string/linkedin"
                        android:textColor="@color/colorAccent"
                        android:autoLink="web"/>
                </LinearLayout>
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/photo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="10dp"
                android:src="@drawable/photo"
                app:layout_collapseMode="pin"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFFFFFFF"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <!-- content -->
    <!-- TODO при прокручивании нет инерции -->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/maint_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_overlapTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--info-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:padding="@dimen/cardViewRecyclerViewPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textAlignment="center"
                android:paddingTop="3dp"
                android:layout_marginBottom="10dp"
                android:text="@string/copyright"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>